--- a/RailVehicleIntroduction.tex
+++ b/RailVehicleIntroduction.tex
@@ -78,13 +78,13 @@
 \logo{\put(-362, 0){\includegraphics[width=0.6cm]{logo.jpg}}}
 
 % Pr\"aliminarien
-\include{part1}
+%\include{part1}
 
 %System\"uberblick
-\include{part2}
+%\include{part2}
 
 % Grundlagen
-\include{part3}
+%\include{part3}
 
 % Anforderungen
 %\include{part4}
@@ -96,7 +96,7 @@
 %\include{part6}
 
 % Einf\"uhrung Zugdynamik
-\include{part7}
+%\include{part7}
 
 % Einf\"uhrung Spurf\"uhrung
 \include{part8}
@@ -105,10 +105,10 @@
 %\include{part9}
 
 %Fahrzeugkonstruktion
-\include{part10}
+%\include{part10}
 
 %Laufwerk
-\include{part11}
+%\include{part11}
 
 
 %\frame[allowframebreaks]{\frametitle{Literatur}
